# SVSLameHistologique

./: README.md  README_AUTHOR.md  dicom_analyse.ipynb  guide_p2chpd.md  readme.md  source_utiles.md
cinr-repro/: .gitignore  pyproject.toml
cinr-repro/notebooks/: 01_demo_tile.ipynb  02_cinr_test_visu.ipynb
cinr-repro/scripts/: check_env.py  train_region.py
cinr-repro/src/: cinr_model.py  extract_tile.py  train_cinr.py
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
learned_compression/: README.md  benchmark_10_000.ipynb  benchmark_complet.ipynb  synthese_p2chpd.ipynb
learned_compression/outputs/: results_p2chpd.csv
