[project]
name = "cinr-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "openslide-bin>=4.0.0.13",
    "openslide-python>=1.4.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
